--- a/samples/android/AdsSample/app/build.gradle
+++ b/samples/android/AdsSample/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "25.0.3"
+    buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.facebook.audiencenetwork.adssample"
         minSdkVersion 21
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:support-core-utils:26.0.1'
     compile 'com.android.support:design:26.0.1'
     compile 'com.facebook.android:audience-network-sdk:4.+'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
